.openshift/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: nodejs-app
spec:
  replicas: 1
  selector:
    app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: 'image-registry.openshift-image-registry.svc:5000/your-project/nodejs-app:latest'
          ports:
            - containerPort: 8080
  triggers:
    - type: ConfigChange
